--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
     </div>
   </div>
 
-  <script src="/runtime-config.js"></script>
+  <script src="runtime-config.js"></script>
   <script>
     const API_URL = (window.__API_URL__ || (location.hostname === 'localhost' || location.hostname === '127.0.0.1' ? 'http://localhost:5000' : 'https://YOUR_BACKEND.onrender.com')) + '/api';
     let token = localStorage.getItem("token");
