--- a/index.html
+++ b/index.html
@@ -606,9 +606,9 @@
     </div>
   </div>
 
-  <script src="runtime-config.js"></script>
   <script>
-    const API_URL = (window.__API_URL__ || (location.hostname === 'localhost' || location.hostname === '127.0.0.1' ? 'http://localhost:5000' : 'https://YOUR_BACKEND.onrender.com')) + '/api';
+    window.__API_URL__ = "https://ltm-finalq2.onrender.com";
+    const API_URL = (window.__API_URL__ || (location.hostname === 'localhost' || location.hostname === '127.0.0.1' ? 'http://localhost:5000' : 'https://ltm-finalq2.onrender.com')) + '/api';
     let token = localStorage.getItem("token");
 
     if (token) {
